--- a/readme
+++ b/readme
@@ -2,3 +2,9 @@ For testing this interface
 
 1). in terminal type -> python -m http.server
 2). in your browser go to http://localhost:8000/Project/
+
+For running the React App:
+1) Run the backend file with -> python3 app.py
+2) Open a new terminal
+3) Change into the frontend folder -> cd frontend
+4) Run the React app -> npm start
